@@ -26,18 +26,30 @@ import io.crate.frameworks.mesos.CrateState;
 import io.crate.frameworks.mesos.PersistentStateStore;
 import io.crate.frameworks.mesos.Version;
 import io.crate.frameworks.mesos.config.Configuration;
+import org.apache.curator.framework.CuratorFramework;
+import org.apache.curator.framework.api.GetChildrenBuilder;
+import org.apache.curator.framework.api.GetDataBuilder;
+import org.json.JSONObject;
 import org.junit.Before;
 import org.junit.Test;
 
 import javax.ws.rs.core.UriInfo;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashMap;
 
+import static org.hamcrest.CoreMatchers.is;
+import static org.hamcrest.CoreMatchers.nullValue;
 import static org.mockito.Mockito.*;
 import static org.junit.Assert.*;
 
 public class CrateRestResourceTest {
 
-    public CrateRestResource resource;
+    private CrateRestResource resource;
+
+    private CuratorFramework cf = mock(CuratorFramework.class);
+    private GetDataBuilder dataBuilder = mock(GetDataBuilder.class);
+    private GetChildrenBuilder childBuilder = mock(GetChildrenBuilder.class);
 
     @Before
     public void setUp() throws Exception {
@@ -48,7 +60,14 @@ public class CrateRestResourceTest {
         CrateInstance crate1 = new CrateInstance("crate1", "task-1", "0.48.0", 44300, "exec-1", "slave-1");
         state.crateInstances().addInstance(crate1);
         when(mockedStore.state()).thenReturn(state);
-        resource = new CrateRestResource(mockedStore, configuration);
+        resource = spy(new CrateRestResource(mockedStore, configuration));
+
+        when(cf.getChildren()).thenReturn(childBuilder);
+        when(cf.getData()).thenReturn(dataBuilder);
+        when(resource.zkClient()).thenReturn(cf);
+
+        doReturn(Integer.MAX_VALUE).when(resource).numActiveSlaves(anyString());
+        doReturn("").when(resource).mesosMasterAddress();
     }
 
     @Test
@@ -98,6 +117,57 @@ public class CrateRestResourceTest {
                 "Scaling down to zero instances is not allowed. " +
                 "Please use '/cluster/shutdown' instead.", res.getMessage());
         assertEquals(403, res.getStatus());
+    }
+
+    @Test
+    public void testClusterResizeNumInstancesEqualOrLessThanActiveAgents() throws Exception {
+        doReturn(3).when(resource).numActiveSlaves(anyString());
+
+        GenericAPIResponse res = (GenericAPIResponse) resource.clusterResize(new ClusterResizeRequest(2)).getEntity();
+        assertEquals("SUCCESS", res.getMessage());
+        assertEquals(200, res.getStatus());
+
+        res = (GenericAPIResponse) resource.clusterResize(new ClusterResizeRequest(3)).getEntity();
+        assertEquals("SUCCESS", res.getMessage());
+        assertEquals(200, res.getStatus());
+    }
+
+    @Test
+    public void testClusterResizeNumInstancesGreaterThanActiveAgents() throws Exception {
+        doReturn(3).when(resource).numActiveSlaves(anyString());
+
+        GenericAPIResponse res = (GenericAPIResponse) resource.clusterResize(new ClusterResizeRequest(4)).getEntity();
+        assertEquals("Could not initialize more Crate nodes than existing number of mesos agents", res.getMessage());
+        assertEquals(403, res.getStatus());
+    }
+
+    @Test
+    public void testMasterMesosAddress() throws Exception {
+        when(childBuilder.forPath(anyString())).thenReturn(Arrays.asList("json.info_0000000000"));
+        when(dataBuilder.forPath(anyString())).thenReturn("{\"address\":{\"ip\":\"host\",\"port\":5050}}".getBytes());
+        doCallRealMethod().when(resource).mesosMasterAddress();
+
+        String address = resource.mesosMasterAddress();
+        assertThat(address, is("host:5050"));
+    }
+
+    @Test
+    public void testMasterMesosAddressNoAddressKeyInCFJsonData() throws Exception {
+        when(childBuilder.forPath(anyString())).thenReturn(Arrays.asList("json.info_0000000000"));
+        when(dataBuilder.forPath(anyString())).thenReturn("{\"a\":{\"ip\":\"172.17.0.3\",\"port\":5050}}".getBytes());
+        doCallRealMethod().when(resource).mesosMasterAddress();
+
+        String address = resource.mesosMasterAddress();
+        assertThat(address, is(nullValue()));
+    }
+
+    @Test
+    public void testMasterMesosAddressChildrenListIsEmpty() throws Exception {
+        when(childBuilder.forPath(anyString())).thenReturn(Collections.<String>emptyList());
+        doCallRealMethod().when(resource).mesosMasterAddress();
+
+        String address = resource.mesosMasterAddress();
+        assertThat(address, is(nullValue()));
     }
 
     @Test
